Milestone 2 Tests added